--- a/src/main/resources/db-conf.properties
+++ b/src/main/resources/db-conf.properties
@@ -1,21 +1,28 @@
-datasource.url = jdbc:mysql://127.0.0.1:3306/test_db
-datasource.user = root
+##MySQL
+#datasource.url = jdbc:mysql://127.0.0.1:3306/test_db
+#datasource.user = root
+#datasource.password = root
+#datasource.driver = com.mysql.jdbc.Driver
+#
+#hibernate.show_sql = true
+#hibernate.hbm2ddl.auto = update
+#hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+POSTGRES
+datasource.url = jdbc:postgresql://localhost:5432/tm
+datasource.user = postgres
 datasource.password = root
-datasource.driver = com.mysql.jdbc.Driver
+datasource.driver = org.postgresql.Driver
+
 
 hibernate.show_sql = true
 hibernate.hbm2ddl.auto = update
-hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.datasource.platform = postgres
 
 
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.database=POSTGRESQL
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.datasource.platform = postgres
-spring.datasource.url = jdbc:postgresql://localhost:5432/tm
-spring.datasource.driver-class = org.postgresql.Driver
-spring.datasource.username = postgres
-spring.datasource.password = root
+
