--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <spring.version>5.0.8.RELEASE</spring.version>
     <jstl.version>1.2.1</jstl.version>
     <jsp.version>2.3.1</jsp.version>
+    <project.contextPath>tm</project.contextPath>
     <servlets.version>3.1.0</servlets.version>
   </properties>
 
@@ -182,27 +183,65 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.8</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast</artifactId>
+      <version>3.12</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast-hibernate53</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast-wm</artifactId>
+      <version>3.8.3</version>
+    </dependency>
+
   </dependencies>
 
   <build>
     <finalName>tm</finalName>
     <plugins>
+
       <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-          <path></path>
-        </configuration>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-maven-plugin</artifactId>
+      <version>9.4.14.v20181114</version>
+      <configuration>
+        <webApp>
+          <contextPath>/${project.contextPath}</contextPath>
+        </webApp>
+      </configuration>
       </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>8</source>
-                <target>8</target>
-            </configuration>
-        </plugin>
+
+<!--      <plugin>-->
+<!--        <groupId>org.apache.tomcat.maven</groupId>-->
+<!--        <artifactId>tomcat7-maven-plugin</artifactId>-->
+<!--        <version>2.2</version>-->
+<!--        <configuration>-->
+<!--          <path></path>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
+<!--        <plugin>-->
+<!--            <groupId>org.apache.maven.plugins</groupId>-->
+<!--            <artifactId>maven-compiler-plugin</artifactId>-->
+<!--            <configuration>-->
+<!--                <source>8</source>-->
+<!--                <target>8</target>-->
+<!--            </configuration>-->
+<!--        </plugin>-->
+
     </plugins>
   </build>
 
